--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "firebase-admin": "^13.1.0",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
