--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -2,7 +2,7 @@ name: Daily Event Reminder
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Every day at 12:00 AM UTC
+    - cron: '0 0 * * *' 
   workflow_dispatch: {}
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          ref: dev  # Ensure you're on the correct branch
+          ref: master 
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
